force-app/main/default/objects/Approval_Process__c/Approval_Process__c.object-meta.xml
<CustomObject>
    <label>Approval Process</label>
    <nameField>
        <displayFormat>MR-{000}</displayFormat>
        <label>Merge Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>