force-app/main/default/objects/Approval_Process__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merge_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>