force-app/main/default/objects/Approval_Process__c/fields/Master_Lead__c.field-meta.xml
<CustomField>
    <fullName>Master_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Merge_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>