force-app/main/default/objects/Approval_Process__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Transfer</fullName>
            </value>
            <value>
                <fullName>Lead Merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>