force-app/main/default/objects/Approval_Process__c/fields/Source_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Source_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Approval Processes (Source Candidate)</relationshipLabel>
    <relationshipName>Approval_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>