force-app/main/default/objects/Approval_Process__c/fields/Target_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Target_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Approval Processes (Target Candidate)</relationshipLabel>
    <relationshipName>Approval_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>