force-app/main/default/objects/Approval_Process__c/recordTypes/Lead_Merged_Request.recordType-meta.xml
<RecordType>
    <fullName>Lead_Merged_Request</fullName>
    <active>true</active>
    <label>Lead Merged Request</label>
</RecordType>