force-app/main/default/objects/Approval_Process__c/recordTypes/Lead_Transfer_Request.recordType-meta.xml
<RecordType>
    <fullName>Lead_Transfer_Request</fullName>
    <active>true</active>
    <label>Lead Transfer Request</label>
</RecordType>